Fixed issue with title bar not always showing up

--- a/TweetWrap/TweetWrap.csproj
+++ b/TweetWrap/TweetWrap.csproj
@@ -18,6 +18,9 @@
     <ProjectTypeGuids>{A5A43C5B-DE2A-4C0C-9213-0A381AF9435A};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <PackageCertificateKeyFile>TweetWrap_StoreKey.pfx</PackageCertificateKeyFile>
     <PackageCertificateThumbprint>139A894796726D1FEE6604A10EE12BABBA1DCCCD</PackageCertificateThumbprint>
+    <AppxAutoIncrementPackageRevision>True</AppxAutoIncrementPackageRevision>
+    <AppxBundle>Always</AppxBundle>
+    <AppxBundlePlatforms>x86|x64</AppxBundlePlatforms>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x86'">
     <DebugSymbols>true</DebugSymbols>
